# PureFlow-Arch

./: .dockerignore  .env.example  .gitignore  .pylintrc  .sqlfluff  README.md  check_infra.sh  dagster_config.yaml  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: dataops.yml  pylint.yml
dags/: dag_factory.py  generate_clean_data.py  generate_dirty_data.py  pureflow_sales_pipeline.py
dags/pipelines/: customer_pipeline.yaml  generate_clean_data.yaml  generate_dirty_data.yaml  sales_pipeline.yaml
dagster_home/: dagster.yaml
data/minio_data/.minio.sys/: format.json
data/minio_data/.minio.sys/tmp/.trash/068d1805-c0b6-4485-b844-21acf8de6d72/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/075cabd0-0735-4828-986b-6113690cc6ae/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/11a0d7d0-72e6-481c-a24a-fdf98ad0dd6f/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/12822e3e-acc3-4a0c-9ba0-7c5be30c2791/: xl.meta.bkp
data/minio_data/.minio.sys/tmp/.trash/15a526e4-023b-4eec-a9d0-97b116565182/: xl.meta.bkp
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: setup_sources.sql
dbt/models/sales/: landing_sources.yml  sales_summary.sql  sources.yml
dbt/models/sales/bronze/: schema.yml  stg_clientes_bronze.sql  stg_vendas_bronze.sql
dbt/models/sales/gold/: sales_summary.sql  schema.yml
dbt/models/sales/silver/: clientes_silver.sql  schema.yml  vendas_silver.sql
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  check_customers_silver_target.json  check_sales_silver_target.json  check_stg_customers_bronze_source.json  check_stg_customers_bronze_target.json  check_stg_sales_bronze_source.json  check_stg_sales_bronze_target.json  sales_landing_suite.json  sales_quality_suite.json  suite_gx_stg_customers_bronze_source.json  suite_gx_stg_sales_bronze_source.json  vendas_landing_suite.json
gx/validation_definitions/: sales_bronze_validation.json  val_check_stg_customers_bronze_source.json  val_check_stg_sales_bronze_source.json  val_suite_gx_stg_customers_bronze_source.json  val_suite_gx_stg_sales_bronze_source.json  vendas_landing_validation.json
infrastructure/: dockerfile
scripts/: generate_data.py  setup_minio.sh  setup_perms.sh
scripts/data/: generate_clean_bucket.sh  generate_dirty_bucket.sh
src/: connection.py  dashboard.py  main.py  main_modular.py  orchestration.py
src/core/: config.py  connection.py  engine.py  factory.py  logger.py  quality.py
src/ingestion/: customer_ingest.py  ingestion.py  sales_ingest.py  upload_to_landing.py
src/pipelines/: __init__.py  customers.py  sales.py  sales_pipeline.py
src/quality/: bronze_rules.py  customer_rules.py  sales_rules.py  silver_rules.py  utils.py
src/scripts/: generate_data.py
src/sql/customers/: clientes_silver.sql  customers_silver.sql  stg_clientes_bronze.sql  stg_customers_bronze.sql
src/sql/sales/: sales_silver.sql  stg_sales_bronze.sql  stg_vendas_bronze.sql  vendas_silver.sql
src/transformations/: bronze_to_silver.py  silver_to_gold.py
src/utils/: generate_clean_data.py  generate_corrupt_data.py  generate_dirty_data.py  generators.py
src/validation/: gx_validator.py
tests/: test_core.py
(+51 files in other folders)
