[project]
name = "pureflow-arch"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Alencar",email = "prosidegcr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "duckdb (>=1.5.1,<2.0.0)",
    "deltalake (>=1.5.0,<2.0.0)",
    "great-expectations (>=1.15.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "boto3 (>=1.42.74,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
