[project]
name = "pureflow-arch"
version = "0.1.0"
description = "TCC Engenharia de Dados - PureFlow"
authors = [
    {name = "Gustavo Alencar",email = "prosidegcr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "duckdb>=1.1.0",
    "deltalake>=0.16.0",
    "great-expectations>=0.18.0",
    "pandas>=2.1.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "dbt-duckdb>=1.7.0",
    "pytest>=8.0.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
    "bandit>=1.7.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
