[project]
name = "pureflow-arch"
version = "0.1.0"
description = "TCC Engenharia de Dados - PureFlow"
authors = [
    {name = "Gustavo Alencar", email = "prosidegcr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "duckdb>=1.1.0",
    "deltalake>=0.16.0",
    "great-expectations>=1.1.0",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.0",
    "dbt-duckdb>=1.7.0",
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-dbt>=0.23.0",
    "dagster-ge>=0.23.0",
    "streamlit>=1.32.0",
    "sqlalchemy>=2.0.0",
    "duckdb-engine>=0.11.0",
    "pytest>=8.0.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
    "bandit>=1.7.0",
    "pylint>=3.0.0"
]

[tool.poetry]
package-mode = false

[tool.pylint.MASTER]
init-hook = 'import sys, os; sys.path.extend([os.path.join(os.getcwd(), "src"), "."])'

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "too-few-public-methods",
    "duplicate-code",
    "import-error",
    "no-name-in-module",
    "wrong-import-position",
    "protected-access",
    "pointless-statement"
]

[tool.pylint.TYPECHECK]
ignored-modules = ["great_expectations", "duckdb", "pandas", "numpy", "pytest"]

[tool.sqlfluff.core]
templater = "dbt"
dialect = "duckdb"
run_away_limit = 10
max_line_length = 80

[tool.sqlfluff.templater.dbt]
project_dir = "./dbt"
profiles_dir = "./dbt"

[tool.sqlfluff.indentation]
tab_width = 4
indent_unit = "space"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
